<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivUser"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:src="@drawable/user">
    </ImageView>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/tv_user">
        </TextView>
        <TextView
            android:id="@+id/tvUltimoMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvUser_desc">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvUltimaConexion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text = "@string/Ultima_conexion"
            android:textAlignment="center"
            android:textSize="12sp">
        </TextView>
    </LinearLayout>


</LinearLayout>